# django_advance

./: db.sqlite3  pyproject.toml
.github/workflows/: ci.yml
sparta/: settings.py  urls.py
tabom/models/: article.py  like.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_auto_now.py  test_like_service.py
